; ModuleID = '/home/carl/AnghaBench/git/compat/regex/extr_regexec.c_re_search_2.c'
source_filename = "/home/carl/AnghaBench/git/compat/regex/extr_regexec.c_re_search_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.re_pattern_buffer = type { i32 }
%struct.re_registers = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @re_search_2(%struct.re_pattern_buffer* %0, i8* %1, i32 %2, i8* %3, i32 %4, i32 %5, i32 %6, %struct.re_registers* %7, i32 %8) #0 {
  %10 = alloca %struct.re_pattern_buffer*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca %struct.re_registers*, align 8
  %18 = alloca i32, align 4
  store %struct.re_pattern_buffer* %0, %struct.re_pattern_buffer** %10, align 8
  store i8* %1, i8** %11, align 8
  store i32 %2, i32* %12, align 4
  store i8* %3, i8** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32 %6, i32* %16, align 4
  store %struct.re_registers* %7, %struct.re_registers** %17, align 8
  store i32 %8, i32* %18, align 4
  %19 = load %struct.re_pattern_buffer*, %struct.re_pattern_buffer** %10, align 8
  %20 = load i8*, i8** %11, align 8
  %21 = load i32, i32* %12, align 4
  %22 = load i8*, i8** %13, align 8
  %23 = load i32, i32* %14, align 4
  %24 = load i32, i32* %15, align 4
  %25 = load i32, i32* %16, align 4
  %26 = load %struct.re_registers*, %struct.re_registers** %17, align 8
  %27 = load i32, i32* %18, align 4
  %28 = call i32 @re_search_2_stub(%struct.re_pattern_buffer* %19, i8* %20, i32 %21, i8* %22, i32 %23, i32 %24, i32 %25, %struct.re_registers* %26, i32 %27, i32 0)
  ret i32 %28
}

declare dso_local i32 @re_search_2_stub(%struct.re_pattern_buffer*, i8*, i32, i8*, i32, i32, i32, %struct.re_registers*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
